Added errors logic and restart function

--- a/sorteador-numeros/index.html
+++ b/sorteador-numeros/index.html
@@ -35,8 +35,8 @@
                 </div>
                 
                 <div class="chute container__botoes">
-                    <button onclick="sortear()" id="btn-sortear" class="container__botao">Sortear</button>
-                    <button onclick="reiniciar()" id="btn-reiniciar" class="container__botao-desabilitado" >Reiniciar</button>
+                    <button onclick="draw()" id="btn-sortear" class="container__botao">Sortear</button>
+                    <button onclick="restart()" id="btn-reiniciar" class="container__botao-desabilitado" >Reiniciar</button>
                 </div>
 
                 <div class="container__texto" id="resultado">
