added functions and validations Shopping Cart
added function addItem to add product to the shopping cart;
Added function clearCart, to clear the shopping cart;
Added validation to check the selected item.

--- a/carrinho-compras/index.html
+++ b/carrinho-compras/index.html
@@ -40,8 +40,8 @@
           </label>
 
           <section class="botoes-wrapper">
-            <button onclick="adicionar()" type="button" class="botao-form botao-adicionar">Adicionar</button>
-            <button onclick="limpar()" type="button" class="botao-form botao-limpar">Limpar</button>
+            <button onclick="addItem()" type="button" class="botao-form botao-adicionar">Adicionar</button>
+            <button onclick="clearCart()" type="button" class="botao-form botao-limpar">Limpar</button>
           </section>
         </section>
       </form>
