--- a/amigo-secreto/index.html
+++ b/amigo-secreto/index.html
@@ -31,9 +31,9 @@ https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css
             </label>
             <input id="nome-amigo" class="form__input" type="text" placeholder="Nome do amigo">
             <div class="form__buttons">
-              <button onclick="adicionar()" type="button" class="button primary">Adicionar</button>
-              <button onclick="sortear()" type="button" class="button secondary">Sortear</button>
-              <a onclick="reiniciar()" href="#" class="form__link">Reiniciar</a>
+              <button onclick="add()" type="button" class="button primary">Adicionar</button>
+              <button onclick="draw()" type="button" class="button secondary">Sortear</button>
+              <a onclick="restart()" href="#" class="form__link">Reiniciar</a>
             </div>
           </form>
         </section>
